added custom validation

--- a/templates/admin/article/form.html.twig
+++ b/templates/admin/article/form.html.twig
@@ -5,9 +5,11 @@
     {{ form_row(articleForm.body, {
         label: 'Текст статьи'
     }) }}
+{% if articleForm.publishedAt is defined %}
     {{ form_row(articleForm.publishedAt, {
         label: 'Дата публикации'
     }) }}
+{% endif %}
     {{ form_row(articleForm.author, {
         label: 'Автор'
     }) }}
