--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -11,6 +11,7 @@
             <th>Заголовок</th>
             <th>Автор</th>
             <th>Опубликована</th>
+            <th>Редактировать</th>
         </tr>
         </thead>
         <tbody>
@@ -23,6 +24,7 @@
                 </td>
                 <td>{{ article.author.firstName }}</td>
                 <td><i class="fas fa-{{ article.isPublished ? 'check' : 'times' }}"></i></td>
+                <td><a href="{{ path('app_admin_articles_edit', { id: article.id }) }}"><i class="fas fa-pen"></i></a></td>
             </tr>
         {% else %}
             <tr>
